--- a/styles/home.scss
+++ b/styles/home.scss
@@ -80,6 +80,12 @@ nav{
     }
 }
 
+div#message{
+  #messageAlert{
+    padding: 2em 1em;
+  }
+}
+
 //HERO SECTION
 div.hero-container{
     padding: 8em 2em;
@@ -238,20 +244,16 @@ div.item-container{
             margin: 0;
               padding-top: 3em;
               margin-bottom: 4em;
+            
               img{
                   margin: auto;
                   display: flex;
                   justify-content: center;
                   width: 30%;
               }
-              h5{
-                  font-size: 14px;
-              }
-              p{
-                  font-size: 12px;
-              }
-              a{
-                  font-size: 12px;
+
+              div.card-body{
+                  text-align: center;
               }
           }
       }
@@ -315,12 +317,9 @@ div.about-container{
       justify-content: center;
       align-items: center;
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
       padding: 0 2em;
 
-      div.card{
-        margin: auto;
-      }
     }
 
     // SWIPER
@@ -339,17 +338,10 @@ div.about-container{
 // TABLET VIEW 768
 @media screen and (min-width: 768px){
     //NAVIGATION SECTION
-    nav{
-        div.logo{
-        h1{
-            font-size: 20px;
-            font-weight: bold;
-        }
-        span.ent{
-            font-size: 18px;
-            letter-spacing: 5px;
-        }
-        }
+    div#message{
+      #messageAlert{
+        padding: 2em 2em;
+      }
     }
 
     //HERO SECTION
@@ -519,6 +511,12 @@ nav{
          }
        }
 
+       div#message{
+        #messageAlert{
+          padding: 0 1em;
+        }
+      }
+
        //HERO CONTENT
        div.hero-container{
         display: grid;
@@ -596,6 +594,12 @@ nav{
 //Navigation
 nav{
     padding: 0 5em;
+}
+
+div#message{
+  #messageAlert{
+    padding: 2em 5em;
+  }
 }
 
 //HERO SECTION
@@ -689,24 +693,8 @@ div.hero-container{
 // DESKTOP VIEW 1280
 @media screen and (min-width: 1280px){
 //NAVIGATION
-    nav{
-        a.navbar-brand{
-            h1{
-                font-size: 22px;
-            }
-            span.ent{
-                font-size: 20px;
-            }
-        }
 
-        div.collapse ul{
-            li.nav-item{
-                a.nav-link{
-                    font-size: 18px;
-                }
-            }
-        }
-    }
+
 
     //HERO SECTION
     div.hero-container{
@@ -775,6 +763,12 @@ div.hero-container{
         //         }
         //     }
         // }
+    }
+
+    div#message{
+      #messageAlert{
+        padding: 2em 12em;
+      }
     }
     //HERO SECTION
     div.hero-container{
